# irrational-synth-software-OLD-

./: Build.sh  CMakeLists.txt  TextureLoading.cpp  TextureLoading.h  a.out  entryPoint.cpp
InputManagers/: InputManager.h  PC_InputManager.cpp
Shapes/: shapes.cpp  shapes.h
VisualTemplates/: ListMenu.cpp  ListMenu.h  VisualTemplate.h  toolbarvar.h
assets/: Arrow.aseprite  Home.aseprite  Select_Dot.aseprite
